--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       </div>
     </section>
   </section>
+  <!-- choose section  -->
   <section class="choose_us">
 
     <h1 class="h1">WHY CHOOSE US</h1>
